Adjust z-indexes to fix layering issues with plots

--- a/sass/_tooltip.scss
+++ b/sass/_tooltip.scss
@@ -1,7 +1,7 @@
 /* Add this attribute to the element that needs a tooltip */
 [data-tooltip] {
   position: relative;
-  z-index: 2;
+  z-index: 6;
   cursor: pointer; }
 
 /* Hide the tooltip content by default */
